# ChangeLog for app-portage/portagedb
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/portagedb/Attic/ChangeLog,v 1.2 2005/01/02 20:35:09 blubb Exp $

  02 Jan 2005; Simon Stelling <blubb@gentoo.org> portagedb-0.2.0.ebuild:
  Typo in append-flag*s*

*portagedb-0.2.0 (02 Jan 2005)

  02 Jan 2005; Simon Stelling <blubb@gentoo.org> +metadata.xml,
  +portagedb-0.2.0.ebuild:
  Initial import
