@@ -1,4 +1,4 @@
 MD5 9a98e005a0d77dd91841cc37e846a015 metadata.xml 221
-MD5 6827ea9c867673b0bde32054207a0dfb ChangeLog 454
-MD5 6be4fd9755be763ade70eb2c86be346e portagedb-0.2.0.ebuild 1016
+MD5 6667e127abb89510e3910e212298577d portagedb-0.2.0.ebuild 1070
+MD5 0695da60ebce45c1df7544bcae7ac434 ChangeLog 578
 MD5 5283d17018c56e1f8ff29426c1f10cc7 files/digest-portagedb-0.2.0 68
