@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portagedb
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/portagedb/Attic/ChangeLog,v 1.2 2005/01/02 20:35:09 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/portagedb/Attic/ChangeLog,v 1.3 2005/01/03 16:46:24 blubb Exp $
+
+  03 Jan 2005; Simon Stelling <blubb@gentoo.org> portagedb-0.2.0.ebuild:
+  added forgotten src_install(), fixes bug #76458
 
   02 Jan 2005; Simon Stelling <blubb@gentoo.org> portagedb-0.2.0.ebuild:
   Typo in append-flag*s*
